# icaro2016

./: ayudas
Larc2016/: .project  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake
Larc2016/CamaravVasos/: CMakeCache.txt  CMakeLists.txt  Makefile  cam.cpp  cmake_install.cmake  imagen  imagen.cpp
Larc2016/DetectarRojo/: Detect.cpp
Larc2016/Test/: CMakeLists.txt  houghcircles.cpp
Larc2016/Testeos/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sensor  test.cpp
Larc2016/Vacas/: CMakeCache.txt  CMakeLists.txt  Makefile  Untitled1  cmake_install.cmake  vacas  vacas.cpp
Larc2016/Vasos/: CMakeLists.txt  cam.cpp
Larc2016/VasosBase/: CMakeCache.txt  CMakeLists.txt  Makefile  circulos.cpp  cmake_install.cmake  setcirc
Larc2016/logos/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  match.cpp  template
