cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
set(raspicam_DIR "/usr/local/lib/cmake" )
find_package( raspicam REQUIRED )
find_package( OpenCV )
IF (OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_executable( vasos cam.cpp )
target_link_libraries( vasos ${raspicam_CV_LIBS} )
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUT SYSTEM")
ENDIF()

